[package]
name = "pm-remez"
version = "0.1.8"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Parks-McClellan Remez FIR design algorithm"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/pm-remez/"
keywords = ["FIR", "remez", "DSP"]
categories = ["algorithms", "mathematics", "science"]

[lib]
name = "pm_remez"
# "cdylib" is necessary to produce a shared library for Python to import from
crate-type = ["cdylib", "rlib"]

[features]
default = ["faer-backend"]

# LAPACK eigenvalue backend using ndarray-linalg
lapack-backend = ["dep:ndarray-linalg"]
# faer eigenvalue backend
faer-backend = ["dep:faer", "dep:faer-ext"]
# nalgebra eigenvalue backend
nalgebra-backend = ["dep:nalgebra"]

# LAPACK backend features forwarded to ndarray-linalg
openblas-static = ["lapack-backend", "ndarray-linalg/openblas-static"]
openblas-system = ["lapack-backend", "ndarray-linalg/openblas-system"]
netlib-static = ["lapack-backend", "ndarray-linalg/netlib-static"]
netlib-system = ["lapack-backend", "ndarray-linalg/netlib-system"]
intel-mkl-static = ["lapack-backend", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["lapack-backend", "ndarray-linalg/intel-mkl-system"]

python = ["pyo3"]

[dependencies]
faer = { version = "0.22.6", optional = true }
faer-ext = { version = "0.6.0", features = ["ndarray"], optional = true }
itertools = "0.14"
nalgebra = { version = "0.33.2", optional = true }
ndarray = "0.16"
ndarray-linalg = { version = "0.17", default-features = false, optional = true }
num-complex = "0.4.3"
num-bigfloat = { version = "1.7.1", optional = true }
num-traits = "0.2"
pyo3 = { version = "0.24", optional = true, features = ["abi3-py38", "extension-module"] }
thiserror = "2"

[dev-dependencies]
rustfft = "6.2"
